@@ -27,10 +27,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>24</source>
-          <target>24</target>
+          <source>21</source>
+          <target>21</target>
           <release>21</release>
-            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
